maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:33: error: ';' expected but 'else' found.
    	} else if ((toucheMur())&&(toucheMurDroite())&&(estFacemur())){
          ^Escaper:43: error: Unmatched closing brace '}' ignored here
}
^